# mutter

./: build.readme  configure.ac  meson.build  meson_options.txt
data/: Makefile.am
src/compositor/plugins/: Makefile.am  default.c  meson.build
src/core/: display.c  keybindings.c
